--- a/JobSityChat/JobSityChat.csproj
+++ b/JobSityChat/JobSityChat.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Hubs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JobSity.Core\JobSity.Core.csproj" />
+  </ItemGroup>
+
 </Project>
