--- a/JobSity.Identity.API/JobSity.Identity.API.csproj
+++ b/JobSity.Identity.API/JobSity.Identity.API.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobSity.Core\JobSity.Core.csproj" />
+  </ItemGroup>
+
 
 </Project>
