authenticating and redirecting to correct view, now mount chat

--- a/JobSity.Identity.API/appsettings.Development.json
+++ b/JobSity.Identity.API/appsettings.Development.json
@@ -1,9 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=JobSityDB;Trusted_Connection=True;"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "e809055b-29d2-47b1-8590-c7130ceabd26",
+    "ExpirationHours": 2,
+    "Issuer": "jobSity",
+    "ValidOn": "https://localhost"
   }
 }
