--- a/JobSity.Core/JobSity.Core.csproj
+++ b/JobSity.Core/JobSity.Core.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+
+	<ItemGroup>
+		<PackageReference Include="FluentValidation" Version="8.6.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.4" />
+		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.4" />
+	</ItemGroup>
+	
 </Project>
