--- a/JobSityChat/appsettings.Development.json
+++ b/JobSityChat/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "IdentityUrl": "https://localhost:44311",
+  "StoqUrl": "https://stooq.com/q/l/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
